add citations page to dashboard
